# AI-customer-support-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  chat.py  crm.py  notifications.py  users.py  webhooks.py
backend/app/core/: firebase.py  security.py
backend/app/integrations/: salesforce.py  sendgrid.py  slack.py  twillo.py
backend/app/services/: chat.py  event_logging.py  load_documents.py  logging.py  vector_store_pinecone.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  chatApi.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Chat.tsx  ChatBubble.tsx  Login.tsx  Signup.tsx
frontend/src/router/: ProtectedRoute.tsx
infrastructure/: docker-compose.yml
