[project]
name = "customer-support-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Caephas",email = "arinzeobidiegwu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "firebase-admin (>=6.6.0,<7.0.0)",
    "langchain (>=0.3.17,<0.4.0)",
    "langgraph (>=0.2.69,<0.3.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
